# CPP-template-aggregate

./: .gitignore  .gitmodules
cpp-practical/: CMakeLists.txt
cpp-practical/include/: linuxstuff.hpp  main.hpp  windowsstuff.hpp
cpp-practical/src/: linuxstuff.cpp  main.cpp  windowsstuff.cpp
examplecpp/: .travis.yml  CMakeLists.txt  Readme.md
examplecpp/examplebin/: CMakeLists.txt
examplecpp/examplebin/src/: Main.cxx
examplecpp/examplelib/: CMakeLists.txt
examplecpp/examplelib/include/: Foo.h
examplecpp/examplelib/src/: Foo.cxx
examplecpp/tests/: CMakeLists.txt  TestLib.cxx
opencl-docker-travis/: .travis.yml  CMakeLists.txt  README.md  build.sh  docker-centos.sh
opencl-docker-travis/lib/: CMakeLists.txt
opencl-docker-travis/lib/include/: bar.h  client.h
opencl-docker-travis/lib/src/: bar.cpp  client.cpp
opencl-docker-travis/tests/: CMakeLists.txt  test.cpp
sfs-prepare/: CMakeLists.txt  README.md
sfs-prepare/malloc/: CMakeLists.txt  global.h  main.cpp
sfs-prepare/mallocnew/: CMakeLists.txt  global.h  main.cpp
sfs-prepare/pointers/: CMakeLists.txt  dummy.cpp  dummy.h  main.cpp  typedef.h
sfs-prepare/stdlist/: CMakeLists.txt  global.h  main.cpp
zeromq-travis/: .travis.yml  CMakeLists.txt  README.md  build.sh
zeromq-travis/src/: main.cpp
